--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/Indian_currency_format.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
